--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^5.0.5",
+    "@capacitor/android": "5.0.5",
     "@capacitor/app": "5.0.3",
     "@capacitor/core": "^5.0.5",
     "@capacitor/haptics": "5.0.4",
